src/styles/base.scss
body {
  font-family: 'Helvetica Neue';
}

.navbar {
  margin-bottom: 80px !important;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

h1 {
  font-size: 2.1em;
  font-family: 'Helvetica Neue';
  font-weight: 300;
}

p {
  color:#444;
}

body {
  /* Margin bottom by footer height */
  /*margin-bottom: 100px;*/
}

footer {
  background-color: #333;
  padding: 40px 0;
  margin-top: 80px;
}

#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 50px;
  background-color: rgb(51, 51, 51);
}

/*.row {
  margin-top: 5px;
  margin-bottom: 5px;
}*/

a {
  color: #666;
}

a.muted-link {
  border-bottom: 1px dotted #666;
  color:#666;
}

a.muted-link:hover, a.muted-link:active {
  border-bottom: 1px solid #999;
  color:#999;
  text-decoration: none;
}

.meta {
  margin-top:2em;
  font-family: Georgia, serif;
}

.input-group-btn {
  color: #e7e7e7;
  border-color: #e7e7e7;
}

.btn-default {
  border-color: #e7e7e7;
}

.search {
  color:#999;
}
.btn, .form-control {
  border-radius: 0px;
}

.transparent {
  border-color: transparent;
  margin: .8em 0;
}

.form-control {
  border-color: #e7e7e7
}

section {
  margin-bottom: 80px;
}

.container-full {
  margin: 0 auto;
  width: 100%;
}

#copyright {
  background: #222;
  padding: 20px 0;
  font-size: 12px;
}

#mc_embed_signup form {
padding: 10px 0 !important;
}

h2 {
  font-size: 18px;
  font-weight: 300;
  text-transform: none;
  letter-spacing: none;
  color: #444;
}

.nav-tabs>li>a {
  border-radius: 0;
}

#details p {
  margin-bottom: 0 !important;
}

